--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install Dependencies
-        run: sudo apt-get install -y golang libgl1-mesa-dev xorg-dev libxkbcommon-dev go-staticcheck
+        run: sudo apt-get update; sudo apt-get install -y golang libgl1-mesa-dev xorg-dev libxkbcommon-dev go-staticcheck
 
       - name: Run Tests
         run: make test
